# rawmigrate

./: .gitignore  docs.md  example.py  export.json  pyproject.toml
rawmigrate/: comparator.py  core.py  entity.py  entity_manager.py  migrator.py  utils.py
rawmigrate/comparators/: __init__.py  function.py  index.py  schema.py  table.py  trigger.py
rawmigrate/entities/: __init__.py  function.py  index.py  schema.py  table.py  trigger.py
